--- a/tryit-frontend/package.json
+++ b/tryit-frontend/package.json
@@ -4,10 +4,13 @@
 	"version": "2.11.0",
 	"private": true,
 	"dependencies": {
-		"@nuxtjs/axios": "5.9.5",
 		"@nuxt/typescript-runtime": "0.3.8",
+		"@nuxtjs/axios": "5.9.5",
+		"@types/swiper": "^5.2.1",
 		"nuxt": "2.11.0",
+		"nuxt-fullpage.js": "0.0.3",
 		"nuxt-property-decorator": "2.5.0",
+		"swiper": "^5.3.1",
 		"vuex-class": "0.3.2"
 	},
 	"scripts": {
