:relieved: select component

--- a/tryit-frontend/package.json
+++ b/tryit-frontend/package.json
@@ -7,6 +7,7 @@
 		"@nuxt/typescript-runtime": "0.3.8",
 		"@nuxtjs/axios": "5.9.5",
 		"@types/swiper": "^5.2.1",
+		"fuse.js": "^3.4.6",
 		"nuxt": "2.11.0",
 		"nuxt-fullpage.js": "0.0.3",
 		"nuxt-property-decorator": "2.5.0",
