--- a/tryit-frontend/package.json
+++ b/tryit-frontend/package.json
@@ -6,13 +6,16 @@
 	"dependencies": {
 		"@nuxt/typescript-runtime": "0.3.8",
 		"@nuxtjs/axios": "5.9.5",
+		"@types/store": "^2.0.2",
 		"@types/swiper": "^5.2.1",
+		"babel-plugin-transform-decorators": "^6.24.1",
 		"fuse.js": "^3.4.6",
 		"nuxt": "2.11.0",
 		"nuxt-fullpage.js": "0.0.3",
 		"nuxt-property-decorator": "2.5.0",
 		"swiper": "^5.3.1",
-		"vuex-class": "0.3.2"
+		"vuex-class": "0.3.2",
+		"vuex-module-decorators": "^0.16.1"
 	},
 	"scripts": {
 		"dev": "nuxt-ts --hostname 0.0.0.0",
