--- a/tryit-frontend/tsconfig.json
+++ b/tryit-frontend/tsconfig.json
@@ -13,6 +13,7 @@
 		"noImplicitAny": false,
 		"baseUrl": ".",
 		"resolveJsonModule": true,
+		"importHelpers": true,
 		"paths": {
 			"~/*": ["./*"]
 		},
