--- a/tryit-frontend/tsconfig.json
+++ b/tryit-frontend/tsconfig.json
@@ -17,6 +17,7 @@
 		"paths": {
 			"~/*": ["./*"]
 		},
-		"types": ["@nuxt/types", "@nuxtjs/axios"]
+		"types": ["@nuxt/types", "@nuxtjs/axios"],
+		"resolveJsonModule": true
 	}
 }
