--- a/tryit-frontend/package.json
+++ b/tryit-frontend/package.json
@@ -1,15 +1,17 @@
 {
-	"name": "tryit-frontend",
+	"name": "try-it-frontend",
 	"description": "Official website for Try IT! congress",
 	"version": "2.11.0",
 	"private": true,
 	"dependencies": {
 		"@nuxt/typescript-runtime": "0.3.8",
 		"@nuxtjs/axios": "5.9.5",
+		"@types/gsap": "^1.20.2",
 		"@types/store": "^2.0.2",
 		"@types/swiper": "^5.2.1",
 		"babel-plugin-transform-decorators": "^6.24.1",
 		"fuse.js": "^3.4.6",
+		"gsap": "3.2.4",
 		"nuxt": "2.11.0",
 		"nuxt-fullpage.js": "0.0.3",
 		"nuxt-property-decorator": "2.5.0",
