--- a/tryit-frontend/package.json
+++ b/tryit-frontend/package.json
@@ -1,29 +1,30 @@
 {
 	"name": "tryit-frontend",
 	"description": "Official website for Try IT! congress",
-	"version": "2.11.0",
+	"version": "2.0.0",
 	"private": true,
 	"dependencies": {
-		"@nuxt/typescript-runtime": "0.3.8",
-		"@nuxtjs/axios": "5.9.5",
+		"@nuxt/types": "^2.15.8",
+		"@nuxt/typescript-runtime": "^2.1.0",
+		"@nuxtjs/axios": "^5.13.6",
 		"@types/store": "^2.0.2",
-		"@types/swiper": "^5.2.1",
 		"babel-plugin-transform-decorators": "^6.24.1",
-		"fuse.js": "^3.4.6",
-		"nuxt": "2.11.0",
-		"nuxt-fullpage.js": "0.0.3",
-		"nuxt-property-decorator": "2.5.0",
-		"swiper": "^6.5.1",
+		"fuse.js": "^6.5.3",
+		"swiper": "^8.0.2",
+		"nuxt": "^2.15.8",
+		"nuxt-property-decorator": "2.9.1",
 		"vuex-class": "0.3.2",
-		"vuex-module-decorators": "^0.16.1"
+		"vuex-module-decorators": "1.2.0",
+		"@nuxtjs/vuetify": "1.12.3",
+		"nuxt-fullpage.js": "0.0.3"
 	},
 	"scripts": {
-		"dev": "nuxt-ts --hostname 0.0.0.0",
-		"build": "nuxt-ts build",
-		"start": "nuxt-ts start",
-		"generate": "nuxt-ts generate"
+		"dev": "nuxt --hostname 0.0.0.0",
+		"build": "nuxt build",
+		"start": "nuxt start",
+		"generate": "nuxt generate"
 	},
 	"devDependencies": {
-		"@nuxt/typescript-build": "0.5.6"
+		"@nuxt/typescript-build": "^2.1.0"
 	}
 }
