Corregido un error de sintaxis en FooterComponent. Cambios en fechas en index.vue. Cambios en el estilo del componente Map. Se ha cambiado el plugin fullpage-nuxt por @openafg/nuxt-fullpage, debido a que el primero se encontraba obsoleto y producia errores en interacciones con la barra de navegacion superior

--- a/tryit-frontend/package.json
+++ b/tryit-frontend/package.json
@@ -15,8 +15,7 @@
 		"nuxt-property-decorator": "2.9.1",
 		"vuex-class": "0.3.2",
 		"vuex-module-decorators": "1.2.0",
-		"@nuxtjs/vuetify": "1.12.3",
-		"nuxt-fullpage.js": "0.0.3"
+		"@openafg/nuxt-fullpage": "1.0.5"
 	},
 	"scripts": {
 		"dev": "nuxt --hostname 0.0.0.0",
