--- a/tryit-frontend/package.json
+++ b/tryit-frontend/package.json
@@ -7,15 +7,15 @@
 		"@nuxt/types": "^2.15.8",
 		"@nuxt/typescript-runtime": "^2.1.0",
 		"@nuxtjs/axios": "^5.13.6",
+		"@openafg/nuxt-fullpage": "1.0.5",
 		"@types/store": "^2.0.2",
 		"babel-plugin-transform-decorators": "^6.24.1",
 		"fuse.js": "^6.5.3",
-		"swiper": "^8.0.2",
 		"nuxt": "^2.15.8",
 		"nuxt-property-decorator": "2.9.1",
+		"swiper": "^8.0.2",
 		"vuex-class": "0.3.2",
-		"vuex-module-decorators": "1.2.0",
-		"@openafg/nuxt-fullpage": "1.0.5"
+		"vuex-module-decorators": "1.2.0"
 	},
 	"scripts": {
 		"dev": "nuxt --hostname 0.0.0.0",
@@ -24,6 +24,8 @@
 		"generate": "nuxt generate"
 	},
 	"devDependencies": {
-		"@nuxt/typescript-build": "^2.1.0"
+		"@nuxt/typescript-build": "^2.1.0",
+		"@nuxtjs/vuetify": "^1.12.3",
+		"webpack-node-externals": "^3.0.0"
 	}
 }
