--- a/tryit-frontend/package.json
+++ b/tryit-frontend/package.json
@@ -12,6 +12,7 @@
 		"cors": "^2.8.5",
 		"nuxt": "^2.15.8",
 		"nuxt-property-decorator": "2.9.1",
+		"vue-qrcode-reader": "^3.1.0",
 		"vuex-class": "0.3.2",
 		"vuex-module-decorators": "1.2.0"
 	},
