Updated timer and welcome image for 2023 edition

--- a/tryit-frontend/package.json
+++ b/tryit-frontend/package.json
@@ -17,7 +17,7 @@
 		"vuex-module-decorators": "1.2.0"
 	},
 	"scripts": {
-		"dev": "nuxt --hostname 0.0.0.0",
+		"dev": "nuxt --hostname localhost",
 		"build": "nuxt build",
 		"start": "nuxt start",
 		"generate": "nuxt generate"
