--- a/tryit-frontend/package.json
+++ b/tryit-frontend/package.json
@@ -4,6 +4,7 @@
 	"version": "3.0.0",
 	"private": true,
 	"dependencies": {
+		"@2alheure/vue-safe-mail": "^1.0.3",
 		"@nuxt/types": "^2.15.8",
 		"@nuxt/typescript-runtime": "^2.1.0",
 		"@nuxtjs/axios": "^5.13.6",
