--- a/tryit-frontend/package.json
+++ b/tryit-frontend/package.json
@@ -11,7 +11,8 @@
 		"@types/store": "^2.0.2",
 		"babel-plugin-transform-decorators": "^6.24.1",
 		"cors": "^2.8.5",
-		"nuxt": "^2.15.8",
+		"node": "^21.6.2",
+		"nuxt": "^2.17.3",
 		"nuxt-property-decorator": "2.9.1",
 		"vue": "^2.7.16",
 		"vue-qrcode-reader": "^3.1.0",
