--- a/tryit-frontend/package.json
+++ b/tryit-frontend/package.json
@@ -7,6 +7,7 @@
 		"@2alheure/vue-safe-mail": "^1.0.3",
 		"@nuxt/types": "^2.15.8",
 		"@nuxt/typescript-runtime": "^2.1.0",
+		"@nuxtjs/auth-next": "^5.0.0-1667386184.dfbbb54",
 		"@nuxtjs/axios": "^5.13.6",
 		"@types/store": "^2.0.2",
 		"babel-plugin-transform-decorators": "^6.24.1",
@@ -22,6 +23,7 @@
 	},
 	"scripts": {
 		"dev": "nuxt --hostname localhost",
+		"dev-with-domain": "nuxt --hostname 0.0.0.0",
 		"build": "nuxt build",
 		"start": "nuxt start",
 		"generate": "nuxt generate"
